plugins {
    // IDE plugins
    id 'idea'
    id 'eclipse'

    // Gradle java-library plugin
    id 'java-library'

    // Jextract plugin
    id "io.github.krakowski.jextract" version "0.3.0"

    // Protobuf plugin
    id "com.google.protobuf" version "0.8.18"
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(19))
    }
}

group = 'de.hhu.bsinfo'
version = getProperty('projectVersion')

jextract.enabled = false

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:${protobufVersion}"
    }
}

dependencies {

    // Infinileap
    implementation project(':core')
    implementation project(':common')

    // Command Line Application Framework
    implementation "info.picocli:picocli:${picocliVersion}"

    // Agrona
    implementation "org.agrona:agrona:${agronaVersion}"

    // SLF4J Logging Library
    implementation "org.slf4j:slf4j-api:${slf4jVersion}"

    // Log4j Logger
    implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"

    // Protobuf
    implementation "com.google.protobuf:protobuf-java:${protobufVersion}"


    // Lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
}

test {
    useJUnitPlatform()
}